--- a/Notebook/path/ed-donner_agents/6_mcp/4_lab4_ja.ipynb
+++ b/Notebook/path/ed-donner_agents/6_mcp/4_lab4_ja.ipynb
@@ -44,8 +44,8 @@
     "3. mcp-server-fetch  \n",
     "ローカル・ヘッドレス・ブラウザを介してWebページを取得\n",
     "\n",
-    "4. メモリ（sqlite3）  \n",
-    "調査した内容は、sqlite3に永続化して記憶する。\n",
+    "4. mcp-memory-libsql  \n",
+    "リサーチャーが調査した内容は、sqlite3に永続化して記憶\n",
     "\n",
     "5. market.py、market_server.py  \n",
     "自作の market MCPサーバー（Polygon.ioで財務データをチェックする）\n",
@@ -334,7 +334,7 @@
     "# MCPサーバーを仕込んだリサーチャー・エージェントを取得\n",
     "researcher = await get_researcher(researcher_mcp_servers)\n",
     "\n",
-    "# リサーチャー・エージェントを単独実行\n",
+    "# リサーチャー・エージェントを単独実行（リサーチの最大試行回数を30回に制限）\n",
     "with trace(\"Researcher\"):\n",
     "    result = await Runner.run(researcher, research_question, max_turns=30)\n",
     "\n",
@@ -689,13 +689,15 @@
    "source": [
     "### 上記で触れらていないファイルの説明\n",
     "\n",
+    "以下は説明はないものの、`4_lab4_ja.ipynb` で利用されている。\n",
+    "\n",
     "- `push_server.py`はPushoverによるプッシュ通知の自作MCPサーバ\n",
     "- `templates.py`は、エージェントのシステム・プロンプト定義\n",
-    "- `reset.py`は、（トレーダーの）アカウントの初期化（特に戦略定義）\n",
     "- `tracers.py`は、トレースとスパンの開始・終了をログに記録\n",
     "\n",
-    "以下は、`5_lab5_ja.ipynb` で触れる内容。\n",
+    "以下は、現時点では未使用で、`5_lab5_ja.ipynb` で開発される内容。\n",
     "\n",
+    "- `reset.py`は、（トレーダーの）アカウントの初期化（特に戦略定義）\n",
     "- `util.py`はUI装飾\n",
     "- `app.py`はエントリポイント"
    ]
