--- a/Notebook/path/ed-donner_agents/6_mcp/5_lab5_ja.ipynb
+++ b/Notebook/path/ed-donner_agents/6_mcp/5_lab5_ja.ipynb
@@ -4,14 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<テーブルスタイル= \"マージン：0;テキストアライグ：左;幅：100％\">\n",
+    "<table style=\"margin: 0; text-align: left; width:100%\">\n",
     "    <tr>\n",
-    "        <td style = \"width：220px; height：150px; vertical-align：middle;\">\n",
-    "            <img src = \"../ assets/aaa.png\" width = \"220\" height = \"150\" style = \"display：block;\" />\n",
+    "        <td style=\"width: 220px; height: 150px; vertical-align: middle;\">\n",
+    "            <img src=\"../assets/aaa.png\" width=\"220\" height=\"150\" style=\"display: block;\" />\n",
     "        </td>\n",
     "        <td>\n",
-    "            <h2 style = \"color：＃ff7800;\">自動トレーダー</h2>\n",
-    "            <span style = \"color：＃ff7800;\"> MCPサーバーのツールとリソースを搭載した自律エージェントを説明するエクイティ取引シミュレーション。\n",
+    "            <h2 style=\"color:#ff7800;\">自律型トレーダー</h2>\n",
+    "            <span style=\"color:#ff7800;\">\n",
+    "                MCPサーバーのツールとリソースを活用した自律型エージェントの動作を示す株式取引シミュレーション。\n",
     "            </span>\n",
     "        </td>\n",
     "    </tr>\n",
@@ -22,29 +23,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 5週目5日目\n",
+    "### 第6週、5日目\n",
     "\n",
     "グランドフィナーレ!!\n",
     "\n",
-    "＃自律トレーダー\n",
+    "# 自律トレーダー\n",
     "\n",
-    "4人のトレーダーと1人の研究者がいる株式取引シミュレーションは、ツールとリソースを備えた44のMCPサーバーを搭載しています。\n",
+    "4人のトレーダーと1人のリサーチャーによる株式取引シミュレーション。\n",
     "\n",
-    "トレーダーのチームを追加する時間。"
+    "（各トレーダーにリサーチャーがツールとしてアシストに付く感じ）\n",
+    "\n",
+    "ツールとリソースを備えた多数のMCPサーバーを活用。\n",
+    "\n",
+    "...に、トレーダーのチームを追加する時間。"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<テーブルスタイル= \"マージン：0;テキストアライグ：左;幅：100％\">\n",
+    "<table style=\"margin: 0; text-align: left; width:100%\">\n",
     "    <tr>\n",
-    "        <td style = \"width：150px; height：150px; vertical-align：middle;\">\n",
-    "            <img src = \"../ assets/tools.png\" width = \"150\" height = \"150\" style = \"display：block;\" />\n",
+    "        <td style=\"width: 150px; height: 150px; vertical-align: middle;\">\n",
+    "            <img src=\"../assets/tools.png\" width=\"150\" height=\"150\" style=\"display: block;\" />\n",
     "        </td>\n",
     "        <td>\n",
-    "            <h2 style = \"color：＃00bfff;\">より多くのMCPサーバーを追加</h2>\n",
-    "            <SPAN STYLE = \"COLOR：＃00BFFF;\">時間が経つにつれて、MCPサーバーエージェントと機能を追加し続ける予定です。今のところ、コースを通じて繰り返しのテーマだったので、プッシュ通知を追加しました。\n",
+    "            <h2 style=\"color:#00bfff;\">MCP サーバーをどんどん追加</h2>\n",
+    "            <span style=\"color:#00bfff;\">\n",
+    "                今後、MCP サーバーのエージェントと機能を追加していく予定です。皆さんもぜひ追加してください！今回は、コース全体で繰り返し取り上げられているプッシュ通知を追加しました。\n",
     "            </span>\n",
     "        </td>\n",
     "    </tr>\n",
@@ -59,27 +65,28 @@
     "\n",
     "私たちには4人のトレーダーがいて、彼らは業界の4人のタイタンに触発されています。  \n",
     "\n",
-    "**ウォーレン**、ウォーレンバフェットへのオマージュ  \n",
-    "**ジョージ**、ジョージ・ソロスへのオマージュ  \n",
-    "**レイ**、レイダリオへのオマージュ  \n",
-    "**キャシー**、キャシー・ウッドへのオマージュ\n",
+    "- **ウォーレン**： ウォーレン・バフェットへのオマージュ  \n",
+    "- **ジョージ**： ジョージ・ソロスへのオマージュ  \n",
+    "- **レイ**： レイダリオへのオマージュ  \n",
+    "- **キャシー**： キャシー・ウッドへのオマージュ\n",
     "\n",
-    "彼らには、名前のあるものに触発された初期投資戦略があります。しかし、彼らは、ツールを使用して、必要に応じて時間の経過とともに独自の戦略を変更する自律性を持っています。\n",
+    "彼らには、名前のあるものに触発された初期投資戦略があります。\n",
     "\n",
+    "しかし、彼らは、ツールを使用して、必要に応じて時間の経過とともに独自の戦略を変更する自律性を持っています。\n",
     "\n",
-    "ファイル「reset.py`」をチェックして、初期投資の論文を読んでください。"
+    "ファイル `reset.py` をチェックして、初期投資の論文を読んでください。"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 次に、トレーダーを出発点に設定します - リセットするためのラインを除外してください。\n",
+    "# ここで、トレーダーを開始点に設定します - リセットするには、行のコメントを解除します。\n",
     "\n",
     "from reset import reset_traders\n",
-    "# reset_traders（）"
+    "reset_traders() # ココでリセットしたら、以下のパート１・２を実行する。"
    ]
   },
   {
@@ -88,13 +95,21 @@
    "source": [
     "## 最終的な変更を明らかにします\n",
     "\n",
-    "いくつかの新しいMCPサーバー - メモリとプッシュ通知 -  `MCP_PARAMS.PY`および` Push_Server.py`をご覧ください\n",
+    "`mcp_params.py` については、説明済みなので割愛、`push_server.py`、`tracers.py`は、未説明だが、`4_lab4_ja.ipynb` で実行済み。\n",
     "\n",
-    "そして、これはクールなことです：\n",
+    "特に、`tracers.py` はクールです：\n",
     "\n",
-    "Openai Agents SDKには、トレースコードと統合できる優れた機能があり、コードのトレースメッセージを監視できるようにします。\n",
+    "- OpenAI Agents SDKには、トレース・コードと統合できる優れた機能があり、コードのトレースメッセージを監視できるようにします。\n",
     "\n",
-    "「tracers.py」を参照してください - トレーダーのアクティビティを記録し、データベースに保存するカスタムトレーサーを作成したので、UIに関するトレーダーの内的な考えを表現できます。"
+    "- `tracers.py`を参照して下さい - トレーダーのアクティビティを記録し、データベースに保存するカスタムトレーサーを作成、UIでトレーダーの内的を表現できる。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 以下のパート１・２を実行する前に\n",
+    "以下のパート１・２は以下のセルから動かすこともできるが、同時に実行する必要があるので、実際の動作確認の際は、ターミナルで実行すること。"
    ]
   },
   {
@@ -103,52 +118,77 @@
    "source": [
     "# そして今..パート1を明らかにします\n",
     "\n",
-    "まず、.envファイルにオプションで追加できる設定がいくつかあります。\n",
+    "### まず、.env ファイルにオプションで追加できる設定がいくつかあります。\n",
     "\n",
-    "`run_every_n_minutes = 60`  \n",
-    "これにより、トレーダーエージェントが実行される頻度が決定され、.envファイルで指定されていない場合、デフォルトは60分ごとにデフォルトです。\n",
+    "必要に応じて、以下に変更を加えてください！\n",
     "\n",
-    "`run_even_when_market_is_closed = false`  \n",
-    "これにより、トレーダーがまだ数時間がなくなっているかどうかが判断され、.envファイルで指定されていない場合、デフォルトはfalseになります。\n",
+    ">`run_every_n_minutes = 60` \n",
     "\n",
-    "`use_many_models = false`  \n",
-    "これにより、Openaiに加えてDeepseek、Gemini、およびGrokを使用して、Deepseek APIとOpenRouterを使用するかどうかが決まります。  \n",
-    ".ENVファイルで指定されていない場合はデフォルトでfalseになります。この場合、GPT-4O-MINIが全体で使用されます。\n",
+    "これはトレーダーエージェントが実行される頻度を決定します。\n",
     "\n",
-    "必要に応じて、これらの変更を加えてください！\n",
+    ".env ファイルで指定されていない場合は、デフォルトで 60 分ごとに実行されます。\n",
     "\n",
-    "次に、 `app.py`のUIコードを見てみましょう\n",
+    ">`run_even_when_market_is_closed = false`  \n",
     "\n",
-    "次に、新しい端末を開きます（Shift + Ctrl +バックティック）\n",
+    "これは、トレーダーがまだ時間切れになるかどうかを決定します。\n",
     "\n",
-    "このディレクトリに変更します：  \n",
-    "`cd 6_mcp`\n",
+    ".env ファイルで指定されていない場合はデフォルトで False になります。\n",
     "\n",
-    "と実行：  \n",
-    "`uv run app.py`\n",
+    ">`use_many_models = false`  \n",
+    "\n",
+    "これは、DeepSeek APIとOpenRouterを使用して、OpenAIに加えてDeepSeek、Gemini、Grokを使用するかどうかを決定します。\n",
+    "\n",
+    ".envファイルで指定されていない場合はデフォルトでFalseに設定され、その場合は `gpt-4o-mini` が全体的に使用されます。\n",
+    "\n",
+    "### 次に、 `app.py` のUIコードを見てみましょう\n",
+    "\n",
+    "- 新しいターミナルを開き（Shift + Ctrl +バックティック）\n",
+    "\n",
+    "- このディレクトリにCDし： `cd 6_mcp`\n",
+    "\n",
+    "- 次のように実行します： `uv run app.py`\n",
     "\n",
     "そして、ユーザーインターフェイスで喜びを感じてください！"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* Running on local URL:  http://127.0.0.1:7860\n",
+      "* To create a public link, set `share=True` in `launch()`.\n",
+      "gio: http://127.0.0.1:7860/: Operation not supported\n",
+      "^C\n",
+      "Keyboard interruption in main thread... closing server.\n"
+     ]
+    }
+   ],
    "source": [
-    "＃そして今..パート2を明らかにします\n"
+    "# 以下は誤りのような ... 4_langgraph, 5_autogenと同様に ...。\n",
+    "#!uv run app.py\n",
+    "\n",
+    "# Jupyter Labからテスト実行していた訳なので、コチラが正しい。\n",
+    "!python app.py"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# そして今..パート2を明らかにします\n",
+    "\n",
     "### 次に、エンジンを見てください：\n",
     "\n",
     "`trading_floor.py`\n",
     "\n",
     "それは魔法が起こる場所である超音符のループを持っています：\n",
     "\n",
-    "\n",
-    "```\n",
+    "```python\n",
     "while True:\n",
     "    await asyncio.gather(*[trader.run() for trader in traders])\n",
     "    await asyncio.sleep(RUN_EVERY_N_MINUTES * 60)\n",
@@ -156,30 +196,42 @@
     "\n",
     "また、環境変数をどのように見ているかがわかります。\n",
     "\n",
-    "そして最後に、新しい端末を開きます（Shift + Ctrl +バックティック、または下の端子の右上にプラスを押します）\n",
+    "- 新しいターミナルを開き（Shift + Ctrl +バックティック）\n",
     "\n",
-    "このディレクトリに変更します：  \n",
-    "`cd 6_mcp`\n",
+    "- このディレクトリにCDし： `cd 6_mcp`\n",
     "\n",
-    "と実行：  \n",
-    "`uv run trading_floor.py`\n",
+    "- 次のように実行します： `uv run trading_floor.py`\n",
     "\n",
-    "ユーザーインターフェイスをご覧ください - トレーディングチームが動作しているのをご覧ください！"
+    "ユーザーインターフェイスをご覧ください - トレーディング・チームが動作しているのをご覧ください！"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 以下は誤りのような ... 4_langgraph, 5_autogenと同様に ...。\n",
+    "#!uv run trading_floor.py\n",
+    "\n",
+    "# Jupyter Labからテスト実行していた訳なので、コチラが正しい。\n",
+    "!python trading_floor.py"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<テーブルスタイル= \"マージン：0;テキストアライグ：左;幅：100％\">\n",
+    "<table style=\"margin: 0; text-align: left; width:100%\">\n",
     "    <tr>\n",
-    "        <td style = \"width：150px; height：150px; vertical-align：middle;\">\n",
-    "            <img src = \"../ assets/stop.png\" width = \"150\" height = \"150\" style = \"display：block;\" />\n",
+    "        <td style=\"width: 150px; height: 150px; vertical-align: middle;\">\n",
+    "            <img src=\"../assets/stop.png\" width=\"150\" height=\"150\" style=\"display: block;\" />\n",
     "        </td>\n",
     "        <td>\n",
-    "            <h2 style = \"color：＃ff7800;\"> apisを監視する最後のリマインダー</h2>\n",
-    "            <Span style = \"color：＃ff7800;\">これは、1時間ごとにループで実行されます。あなたはあなたのAPIの使用を見て、あなたが十分に持っていたときにこれを停止する必要があります！<br/>\n",
-    "            私はこれを何時間も幸せに見ていることに気づきました - そして、私もあなたもそうすることを願っています！自律エージェントの力を紹介する巨大なプロジェクト。\n",
+    "            <h2 style=\"color:#ff7800;\">最後にもう一度、API の監視についてお知らせです。</h2>\n",
+    "            <span style=\"color:#ff7800;\">\n",
+    "                これは 1 時間ごと、または指定した間隔でループ実行されます。API の使用状況を監視し、十分な時間になったら実行を停止してください。<br/>\n",
+    "                私は何時間も楽しくこのツールを見ています。皆さんもぜひ見てみてください！自律エージェントの威力を示す大規模なプロジェクトです。\n",
     "            </span>\n",
     "        </td>\n",
     "    </tr>\n",
@@ -190,14 +242,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<テーブルスタイル= \"マージン：0;テキストアライグ：左;幅：100％\">\n",
+    "<table style=\"margin: 0; text-align: left; width:100%\">\n",
     "    <tr>\n",
-    "        <td style = \"width：150px; height：150px; vertical-align：middle;\">\n",
-    "            <img src = \"../ assets/ants.png\" width = \"150\" height = \"150\" style = \"display：block;\" />\n",
+    "        <td style=\"width: 150px; height: 150px; vertical-align: middle;\">\n",
+    "            <img src=\"../assets/thanks.png\" width=\"150\" height=\"150\" style=\"display: block;\" />\n",
     "        </td>\n",
     "        <td>\n",
-    "            <h2 style = \"color：＃00cc00;\">どうもありがとうございました！</h2>\n",
-    "            <Span style = \"color：＃00cc00;\">結論に達しました！私はあなたが最後までそれに固執したことにとても感謝しています。私の編集者は私がもう一度言及しなかった場合、私を叩きます：あなたがウデミーでコースを評価することができれば、私は非常に感謝します：それはウデミーが他の人にコースを示すかどうかを決定する最も重要な方法です。あなたがここまでそれを作っていて、どういうわけかLinkedInで私とのつながりに抵抗することに抵抗するなら -  <a href = \"https://www.linkedin.com/in/eddonner/\">ここにもう一度もう一度！コースであなたの成果について投稿したい場合は、タグを付けてください。露出を増やすために体重を計ります。<br> <br/>おめでとうございます！ \n",
+    "            <h2 style=\"color:#00cc00;\">本当に本当にありがとうございます！</h2>\n",
+    "            <span style=\"color:#00cc00;\">\n",
+    "                最後まで読んでいただき、本当に感謝しています。もしもう一度言わなかったら編集者に叩かれてしまうかもしれませんが、Udemyでコースを評価していただけると大変助かります。Udemyがこのコースを他の人に公開するかどうかを決める上で最も重要な要素であり、大きな違いを生みます。<br/><br/>\n",
+    "                ぜひ連絡を取り合い、進捗状況をお知らせください。そして、この困難な時期に、この特別な分野でのあなたの旅を共有してください。ここまで読んでくれて、LinkedInで私と繋がるのがためらわれていた方もいるかもしれません。もう一度<a href=\"https://www.linkedin.com/in/eddonner/\">ここにいます</a>！コースでの成果について投稿したい場合は、私をタグ付けしてください。露出を高めるために私が協力します。<br><br/>\n",
+    "                おめでとうございます！\n",
     "            </span>\n",
     "        </td>\n",
     "    </tr>\n",
